--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Stopwatch</title>
-
+	<title>Stopwatch for BY</title>
+	<link rel="icon" type="image/x-icon" href="favicon.png">
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -21,7 +21,7 @@
 		</div>
 	</div>
     
-
+	<script src="attention.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
