--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Stopwatch for BY</title>
-	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link rel="icon" type="image/x-icon" href="./img/favicon.png">
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1 class="heading1">DinamoERP Stopwatch</h1>
+    <h1 class="heading1">BY Stopwatch</h1>
 	<div class="watch">
 		<div class="time">
 			00:00:00
@@ -20,8 +20,11 @@
 			<button id="reset">Reset</button>
 		</div>
 	</div>
+	<div class="cat">
+		<img src="/img/cat.JPG" alt="" srcset="">
+	</div>
     
-	<script src="attention.js"></script>
-	<script src="main.js"></script>
+	<script src="./js/attention.js"></script>
+	<script src="./js/main.js"></script>
 </body>
 </html>
