--- a/index.html
+++ b/index.html
@@ -8,23 +8,31 @@
 	<link rel="icon" type="image/x-icon" href="./img/favicon.png">
 	<link rel="stylesheet" href="style.css" />
 </head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r123/three.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.21/vanta.birds.min.js"></script>
 <body>
-    <h1 class="heading1">BY Stopwatch</h1>
-	<div class="watch">
-		<div class="time">
-			00:00:00
+	
+		<article class="wrapper">
+		  
+		<h1 class="heading1">BY Stopwatch</h1>
+		<div class="watch">
+			<div class="time">
+				00:00:00
+			</div>
+			<div class="controls">
+				<button id="start">Start</button>
+				<button id="stop">Stop</button>
+				<button id="reset">Reset</button>
+			</div>
 		</div>
-		<div class="controls">
-			<button id="start">Start</button>
-			<button id="stop">Stop</button>
-			<button id="reset">Reset</button>
+		<div class="cat">
+			<a href="https://www.linkedin.com/in/cem-eren-senturk/" class="catLink" target="_blank"><img src="/img/cat.JPG" alt="" srcset=""></a>
 		</div>
-	</div>
-	<div class="cat">
-		<img src="/img/cat.JPG" alt="" srcset="">
-	</div>
+		</article>
     
 	<script src="./js/attention.js"></script>
 	<script src="./js/main.js"></script>
+
+
 </body>
 </html>
